metadata/src/objects/FObjectThree__c.object
<CustomObject>
    <description>An object used in Forccea test methods.</description>
    <fields>
        <fullName>ForceeaPartition__c</fullName>
        <externalId>true</externalId>
        <label>ForceeaPartition</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestLookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TestLookup</label>
        <referenceTo>FObjectFour__c</referenceTo>
        <relationshipLabel>FObjectThrees</relationshipLabel>
        <relationshipName>FObjectThrees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestText__c</fullName>
        <label>TestText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FObjectThree</label>
    <listViews>
        <fullName>All_fields</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TestText__c</columns>
        <columns>TestLookup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FO3-{00000}</displayFormat>
        <label>FObjectThree Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FObjectThrees</pluralLabel>
    <recordTypes>
        <fullName>RecordTypeA</fullName>
        <active>true</active>
        <label>Record Type A</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>